ndb - bug#48037   Fix various abort cases with indexes that could in worst case     cause node-failure